kubectl/snake-back/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: snake-game-backend
spec:
  selector:
    app: snake-game-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
