kubectl/snake-back/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: snake-game-backend-ingress
spec:
  rules:
  - host: dirag-games-api.lab.sspcloud.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: snake-game-backend
            port:
              number: 80
